[package]
name = "doubletime"
version = "0.1.0"
edition = "2021"
authors = ["Matthew R. Carbone"]
include = ["src/default_config.yaml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31" }
clap = { version = "4.0", features = ["derive"] }
edit = { version = "0.1.4" }
homedir = { version = "0.2.1" }
log = { version = "0.4.20" }
open = { version = "5.0.0" }
pretty_env_logger =  { version = "0.5.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
uuid = { version = "0.8.1", features = ["v4"] }

